[gd_scene load_steps=14 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Cave-Story.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Pads/Pad_01_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Bonus_Items/Jump_Bonus_01.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pads/Pad_02_1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Bonus_Items/Jump_Bonus_02.png" type="Texture" id=6]
[ext_resource path="res://Assets/Pads/Pad_03_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Bonus_Items/Jump_Bonus_03.png" type="Texture" id=8]
[ext_resource path="res://Assets/Pads/Pad_04_1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Bonus_Items/Jump_Bonus_04.png" type="Texture" id=10]
[ext_resource path="res://Assets/left.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 135
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 359.697, 399.96 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="HeaderText" type="RichTextLabel" parent="."]
margin_left = 20.9166
margin_top = 117.628
margin_right = 699.917
margin_bottom = 320.628
custom_fonts/normal_font = SubResource( 1 )
text = "Select World"

[node name="World1" type="Sprite" parent="."]
position = Vector2( 156.499, 461.336 )
scale = Vector2( 0.304342, 0.554523 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="World1"]
position = Vector2( -10.9756, -243.966 )
scale = Vector2( 1.59423, 0.953899 )
texture = ExtResource( 4 )

[node name="RichTextLabel5" type="RichTextLabel" parent="World1"]
margin_left = -163.984
margin_top = 178.028
margin_right = 243.016
margin_bottom = 301.028
custom_fonts/normal_font = SubResource( 1 )
text = "World 1"

[node name="World2" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 454.98, 467.28 )
scale = Vector2( 0.308738, 0.52623 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="World2"]
position = Vector2( 11.4036, -282.092 )
scale = Vector2( 1.34457, 1.09412 )
texture = ExtResource( 6 )

[node name="RichTextLabel4" type="RichTextLabel" parent="World2"]
margin_left = -190.066
margin_top = 164.047
margin_right = 216.934
margin_bottom = 287.047
custom_fonts/normal_font = SubResource( 1 )
text = "World 2"

[node name="World3" type="Sprite" parent="."]
position = Vector2( 149.425, 828.302 )
scale = Vector2( 0.290654, 0.576665 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="World3"]
position = Vector2( -3.08289, -144.221 )
scale = Vector2( 1.60411, 1 )
texture = ExtResource( 8 )

[node name="RichTextLabel5" type="RichTextLabel" parent="World3"]
margin_left = -239.052
margin_top = 245.032
margin_right = 167.948
margin_bottom = 368.032
custom_fonts/normal_font = SubResource( 1 )
text = "LOCKED"

[node name="World4" type="Sprite" parent="."]
position = Vector2( 438.957, 863.064 )
scale = Vector2( 0.348653, 0.476576 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="World4"]
position = Vector2( 9.58066, -290.877 )
texture = ExtResource( 10 )

[node name="RichTextLabel6" type="RichTextLabel" parent="World4"]
margin_left = -218.488
margin_top = 221.529
margin_right = 188.512
margin_bottom = 344.529
custom_fonts/normal_font = SubResource( 1 )
text = "LOCKED"

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 52.2889, 60.4911 )
scale = Vector2( 0.125373, 0.0902711 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 52.2889, 60.4911 )
scale = Vector2( 0.125373, 0.0902711 )
shape = SubResource( 2 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
